testing base ref-2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,5 @@
 
 <body>
   <app-root></app-root>
-<script src="/runtime.ee6e0053f1a852f3.js" type="module"></script><script src="/polyfills.97296a97c95725a4.js" type="module"></script><script src="main.6d75df44924917f3.js" type="module"></script>
-
-
+<script src="runtime.ee6e0053f1a852f3.js" type="module"></script><script src="polyfills.97296a97c95725a4.js" type="module"></script><script src="main.6d75df44924917f3.js" type="module"></script>
 </body></html>
